--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,11 @@
 .main-container{
     display:flexbox;
     flex-direction: column;
-    color: #97351C;
+    background-color: #97351C;
     border-style: solid;
     border-color: #C55637;
+}
+
+.main-container > header{
+    color: #CAC589;    
 }
