--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,6 +36,10 @@ header {
   margin: 10px 0;
 }
 
+.video-section {
+  width: 100%;
+}
+
 .video-section > h2 {
   background-color: #C55637;
   width: 100%;
