--- a/stylesheet.css
+++ b/stylesheet.css
@@ -43,8 +43,8 @@ header > i {
   color: #CAC589;
   text-align: left;
   justify-content: flex-start;
-  padding-left: 30px;
-  margin: 10px 0;
+  padding-left: 5px;
+  margin: 5px;
 }
 
 .video-section {
