--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,11 +51,11 @@ header > i {
 
 .video-section > h2 {
   background-color: #C55637;
+  padding: 3px;
   width: 100%;
   font-size: small;
   text-align: left;
   color: #CAC589;
-  border: 2px;
 }
 
 form {
