--- a/stylesheet.css
+++ b/stylesheet.css
@@ -52,6 +52,7 @@ header > i {
   background-color: #C55637;
   padding: 3px;
   width: 100%;
+  height: 100%;
   font-size: small;
   text-align: left;
   color: #CAC589;
