--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,9 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
   background-color: #97351C;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .main-container {
